# vtk2getfem

./: CMakeLists.txt  LICENSE
config/: README.md
config/cmake_modules/: FindGetFEM.cmake  FindMuParser.cmake
sources/: CMakeLists.txt  export.cpp  export.h  global_function.cpp  global_function.h  info.cpp  info.h  main.cpp  manager.cpp  manager.h  model.cpp  model.h  vtk2getfem.cpp  vtk2getfem.h
src/: CMakeLists.txt  export.cpp  export.h  global_function.cpp  global_function.h  main.cpp  manager.cpp  manager.h  model.cpp  model.h  vtk2getfem.cpp
tests/: CMakeLists.txt  infoTest.sh
tests/data/: poly5quads.vtk  simple_ugrid.vtk
tests/results/: infoTest.out
